[package]
name = "rust-web-poc"
version = "0.1.0"
authors = ["LimelioN <memorial.limelion@gmail.com>"]
edition = "2018"
include = ["src/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
actix = ["actix-web"]

[[bin]]
name = "actix_fibo"
path = "src/actix/fibo.rs"
required-features = ["actix"]
